--- a/EnglishWebSimulatorApp/Resources/Views/Home/AboutApp.ru.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Home/AboutApp.ru.resx
@@ -117,15 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="dictionary1" xml:space="preserve">
+    <value>В приложении осуществлена возможность работы со словарём, который на начальном этапе имеет 8000 слов, пополняемых администратором сайта. Работа пользователя со словарём включает в себя два режима тренировок, которые отличаются тем что в режиме проверки знаний по окончанию урока результат автоматически сохраняется а неправильно введенное слово больше не повторяется, выводится страница с оповещение ошибки.</value>
+  </data>
+  <data name="dictionary2" xml:space="preserve">
+    <value>Также можно просматривать слова в виде карточек, чтобы перейти к следующему, нужно нажать кнопку ДАЛЕЕ, чтобы перейти к определенному слову, нужно ввести цифру и нажать на птичку.</value>
+  </data>
+  <data name="dictionary3" xml:space="preserve">
+    <value>Независимо от вашего выбора обучения или проверки знаний, в любом случае вы будете перенаправлены на страницу с настройками для выбора списка слов.</value>
+  </data>
+  <data name="dictionary4" xml:space="preserve">
+    <value>Режим обучения со словарём схож с режимом тренировок со словами пользователя, также имеется панель для вывода оставшихся слов, правильных ответов, ошибок, с выводом анимаций в зависимости от правильности ответа. Есть панель с подсказками изображений, воспроизведение аудио, и добавлена транскрипция.</value>
+  </data>
   <data name="Discrip" xml:space="preserve">
     <value>Приложение предназначено для запоминания и изучения английских слов. Пользователю предоставляется возможность добавлять, сохранять и использовать определённые
 слова. Хранение слов осуществляется в следующих вариантах: - английский вариант; - русский вариант; -визуализация изображение; - звуковой формат.</value>
+  </data>
+  <data name="StringEight" xml:space="preserve">
+    <value>Работа со словарем</value>
   </data>
   <data name="StringFive" xml:space="preserve">
     <value>Просмотр слов</value>
   </data>
   <data name="StringFour" xml:space="preserve">
     <value>Для добавления слова нужно перейти по вкладке (пополнить слово) в главной панели или в просмотре всех слов нажать на кнопку (Добавить слово)!</value>
+  </data>
+  <data name="StringNine" xml:space="preserve">
+    <value>Страничка пользователя</value>
   </data>
   <data name="StringOne" xml:space="preserve">
     <value>Регистрация пользователя</value>
@@ -140,9 +158,90 @@
     <value>Добавление слов</value>
   </data>
   <data name="StringTwo" xml:space="preserve">
-    <value>Для авторизации и регистрации в правом верхнем углу приложения есть форма с кнопками регистрации и авторизации (рис1). Без регистрации пользователя функциональность приложения недоступна. После нажатия на кнопку регистрации мы попадаем в форму (рис.2), где вам нужно ввести адрес электронной почты и придумать пароль. Пароль должен содержать символы латинского алфавита как в верхнем, так и в нижнем регистре, специальные символы, цифры. После регистрации появится ссылка на которую необходимо нажать (рис.3), для подтверждения регистрации. Для авторизации необходимо перейти по ссылке Login, где также необходимо ввести адресс электронной почты и пароль. И если все хорошо в панели появляется кнопки навигации. </value>
+    <value>  После регистрации появится ссылка на которую необходимо нажать (рис.3), для подтверждения регистрации. Для авторизации необходимо перейти по ссылке Login, где также необходимо ввести адресс электронной почты и пароль. И если все хорошо в панели появляется кнопки навигации. </value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Руководство по использованию приложения.</value>
+  </data>
+  <data name="Title1" xml:space="preserve">
+    <value>WEB приложение по изучению и пополнению запаса слов английского языка.</value>
+  </data>
+  <data name="Title10" xml:space="preserve">
+    <value>Приложение предназначенно для добавления и запоминания английских слов, для каждого пользователя существует своя библиотека слов с которой он может переодически работать пополнять, повторять, просматривать. Если вы ленитесь постоянно пополнять новые слова, то можите работать с общей библиотекой слов, без возможности пополнения, но также можно проводить просмотр слов, повторение, тренировки. Результаты тренировок записываются, и пользователь может просмотреть результаты своей работы за неделю.</value>
+  </data>
+  <data name="Title11" xml:space="preserve">
+    <value>Для авторизации и регистрации в правом верхнем углу приложения есть форма с кнопками регистрации и авторизации (рис1). Без регистрации пользователя функциональность приложения недоступна.</value>
+  </data>
+  <data name="Title12" xml:space="preserve">
+    <value>После нажатия на кнопку регистрации мы попадаем в форму (рис.2), где вам нужно ввести адрес электронной почты и придумать пароль. Пароль должен содержать символы латинского алфавита как в верхнем, так и в нижнем регистре, специальные символы, цифры.</value>
+  </data>
+  <data name="Title13" xml:space="preserve">
+    <value>В режиме тренинга вы можете перейти по кнопке Уроки, в панели навигация. В выпадающем списке на выбор предлагаются три вида занятий:</value>
+  </data>
+  <data name="Title14" xml:space="preserve">
+    <value>1. Слово на слух, по произнесенному компьютером слову необходимо ввести его на английском языке;</value>
+  </data>
+  <data name="Title15" xml:space="preserve">
+    <value>2. Слово по английскому, по указанному английскому слову необходимо ввести перевод на русском;</value>
+  </data>
+  <data name="Title16" xml:space="preserve">
+    <value>3. Слово по русскому, по указанному русскому слову необходимо ввести перевод на английском;</value>
+  </data>
+  <data name="Title17" xml:space="preserve">
+    <value>Что бы вы не выбрали в любом случае вас направит на страницу с настройками по выбору слов, где вы можете выбрать различную вариацию выбора количество слов их расположение, а также выбрать слова, по установленным вами темам.</value>
+  </data>
+  <data name="Title18" xml:space="preserve">
+    <value>Интерфейс обучающей страницы очень информативен и прост, есть панель для отображения оставшихся слов, правильных и неправильных ответов. Пользователь вводит нужное слово в форму, и после нажатия выполняется проверка. Если ответ правильный, появляется радостная анимация, если ответ неправильный, появляется грустный значок.</value>
+  </data>
+  <data name="Title19" xml:space="preserve">
+    <value>Также существует возможность подсказки по нажатию на иконку с вопросиком, в зависимости от имеющихся данных, появляется изображение, иконка для аудио прослушивания слова, и окончательно иконка для просмотра правильного ответа.</value>
+  </data>
+  <data name="Title2" xml:space="preserve">
+    <value>При изучении иностранного языка очень важно постоянно пополнять свой лексический запас — учить новые и новые слова. Однако не у всех получается делать это с успехом. Для успешного запоминания новых слов лучше использовать ассоциативное изображение, лучше если изображение будет ярким, странным или смешным — так оно надежнее запомнится.  ещё одним помощником в изучении является слуховое восприятие и произношение изучаемого слова, готовую иллюстрацию или звуковой файл можно подобрать в Google.</value>
+  </data>
+  <data name="Title20" xml:space="preserve">
+    <value>По окончанию слов урок заканчивается и вы попадаете на страницу с результатами урока. Вам предлагается выбор сохранения результатов урока.</value>
+  </data>
+  <data name="Title3" xml:space="preserve">
+    <value>Вероятно, с вами такое случалось в школе: выучили десяток новых английских слов, сделали домашнее задание, написали диктант… И спустя месяц все забыли. Так происходит потому, что новую лексику нужно периодически повторять и освежать в памяти. Есть даже рекомендованный график повторений английских слов, составленный на основе трудов немецкого психолога Германа Эббингауза:</value>
+  </data>
+  <data name="Title4" xml:space="preserve">
+    <value>- снова использовать слово через 20–30 минут;</value>
+  </data>
+  <data name="Title5" xml:space="preserve">
+    <value>- повторить слово через день;</value>
+  </data>
+  <data name="Title6" xml:space="preserve">
+    <value>- вернуться к новому слову спустя 2–3 недели;</value>
+  </data>
+  <data name="Title7" xml:space="preserve">
+    <value>- повторить слово через 2–3 месяца;</value>
+  </data>
+  <data name="Title8" xml:space="preserve">
+    <value>- закрепить слово спустя 2–3 года.</value>
+  </data>
+  <data name="Title9" xml:space="preserve">
+    <value>Именно на этом способе запоминания основано приложение для изучения английских слов. Пользователю создаётся индивидуальная возможность цифрового хранения иностранных слов с изображением и звуковым сопровождением. Проведение занятий по изучению путём постоянного просматривания в режиме тренировки. Добавляя каждый день по пять слов, и проводя ежедневные тренировки за незначительный промежуток времени ваш словарный запас значительно пополнится, а самое главное, что он будет хранится в цифровом варианте, и в любой момент его можно будет вспомнить, повторить, освежить в своей памяти.</value>
+  </data>
+  <data name="UserPage" xml:space="preserve">
+    <value>Страничка пользователя включает три режима:</value>
+  </data>
+  <data name="UserPage1" xml:space="preserve">
+    <value>1.Прогресс пользователя предназначен для просмотра результатов пользователя за неделю;</value>
+  </data>
+  <data name="UserPage2" xml:space="preserve">
+    <value>2.Результат пользователя показывает, какое место пользователь занимает между всеми пользователями приложения;</value>
+  </data>
+  <data name="UserPage3" xml:space="preserve">
+    <value>3.Ваша учётная запись отображает информацию о пользователе;</value>
+  </data>
+  <data name="UserPage4" xml:space="preserve">
+    <value>В режиме просмотра результатов пользователя можно просмотреть прогресс в определённый день в течении недели нажатием на иконку play, конечно только в случае имеющихся данных об активных уроках пользователя.  Анимационная иконка в нижней части указывает о наличии результата, огонь - отсутствие результата, наградной кубок о наличии результата.</value>
+  </data>
+  <data name="UserPage5" xml:space="preserve">
+    <value>В режиме результаты пользователя, можно увидеть какое место среди пользователей по навыкам владения словами, занимает текущий пользователь. В дополнение отображается тройка победителей.</value>
+  </data>
+  <data name="UserPage6" xml:space="preserve">
+    <value>В вашей учётной записи вы можете не только просмотреть данные о себе но и сменить изображение аватарки, имя пользователя вместо адреса электронной почты, все это можно сделать при помощи нажатия на определённые иконки Pencil.</value>
   </data>
 </root>
