Для ускорения сайта я сделал связь с базой через хранимые процедуры, ну и ещё хранение картинок не в байтах а стринговой строкой название картинки, а картинки хранятся в отдельной папке на сервере, скорость заметно улучшилось.

--- a/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.en.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.en.resx
@@ -139,7 +139,7 @@
     <value>Start the lesson!</value>
   </data>
   <data name="ShowWords" xml:space="preserve">
-    <value>Show Words!</value>
+    <value>Show Words </value>
   </data>
   <data name="StatisticInfo" xml:space="preserve">
     <value>Results of user</value>
