--- a/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.ru.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.ru.resx
@@ -138,6 +138,9 @@
   <data name="navStartsApp" xml:space="preserve">
     <value>Начать урок!</value>
   </data>
+  <data name="Show all user words" xml:space="preserve">
+    <value>Показать все слова пользователей</value>
+  </data>
   <data name="Show cards words" xml:space="preserve">
     <value>Просмотр карточек со словами</value>
   </data>
@@ -145,7 +148,7 @@
     <value>Просмотр слов</value>
   </data>
   <data name="ShowWords" xml:space="preserve">
-    <value>Показать все слова!</value>
+    <value>Показать все слова</value>
   </data>
   <data name="StatisticInfo" xml:space="preserve">
     <value>Результаты пользователя</value>
